--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,11 @@
 html, body {
-  height: 100%;
-}
-
-main {
-  margin: 0 20px;
+  margin: 10px;
 }
 
 h1 {
   font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
   font-weight: 900;
-  font-size: 36px;
+  font-size: 28px;
   color: #111;
 
   letter-spacing: -1px;
@@ -24,15 +20,21 @@ a {
 a:hover {
   background-color: #d14;
   color: #fff;
-
 }
 
-.vertical-center {
-  position: relative;
-  top: 50%;
-  -webkit-transform:translateY(-50%);
-     -moz-transform:translateY(-50%);
-      -ms-transform:translateY(-50%);
-       -o-transform:translateY(-50%);
-          transform:translateY(-50%);
+@media only screen
+and (min-width : 1224px) {
+  main {
+    width: 90%;
+    margin: auto;
+    position: absolute;
+    top: 50%; left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
+  }
+
+  h1 {
+    font-size: 36px;
+  }
 }
